--- a/gridlex/index.html
+++ b/gridlex/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gridlex</title>
-    <link rel="stylesheet"  href="./res.css">
+    <link rel="stylesheet"  href="./index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
@@ -33,12 +33,12 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="./images/_Banner 1.jpg" class="d-block w-100" alt="...">
+              <img src="./_Banner 1.jpg" class="d-block w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
               </div>
             </div>
             <div class="carousel-item">
-              <img src="./images/Banner 2.jpg" class="d-block w-100" alt="...">
+              <img src="./Banner 2.jpg" class="d-block w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
               </div>
             </div>
@@ -76,10 +76,10 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="./images/_About us 1.jpg" class="d-block w-100" alt="...">
+                <img src="./_About us 1.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="./images/_About us 2.jpg" class="d-block w-100" alt="...">
+                <img src="./_About us 2.jpg" class="d-block w-100" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -175,6 +175,6 @@
       
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-      <Script src="./res.js"></Script>
+      <Script src="./index.js"></Script>
 </body>
 </html>
